--- a/src/styles/homeButton.module.css
+++ b/src/styles/homeButton.module.css
@@ -3,4 +3,5 @@
     height:100%;
     background: url('../../assets/favicon.png') no-repeat center;
     background-size: 100%;
+    display: inline-block;
 }
